# Fast_API

DAY1/: README.md  main.py  pyproject.toml
DAY1/app/models/: users.py
DAY1/app/schemas/: users.py
DAY2/: README.md  Summarize  main.py  test_simple.py
DAY2/app/models/: movies.py
DAY2/app/schemas/: users.py
DAY3/: README.md  Summarize  main.py
DAY3/app/models/: users.py
DAY3/app/routers/: movies.py  users.py
DAY3/app/schemas/: movies.py  token.py  users.py
DAY3/app/utils/: jwt.py
DAY4/: Summarize
DAY5/: readme.md
DAY6/: README.md
DAY7/: readme.md
DAY8/: 기술심화1.md  기술심화2.md
